[tool.poetry]
name = "submissao-correcao"
version = "0.1.0"
description = ""
authors = ["Rodrigo Rocha <rodrigorgs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
html5lib = "^1.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
